--- a/views/customers/edit.erb
+++ b/views/customers/edit.erb
@@ -23,5 +23,5 @@
   value="<%= @customer.shipping_info %>"
   />
 
-  <input type='submit' value="Delete Customer Details">
+  <input type='submit' value="Edit Customer Details">
 </form>
