--- a/views/equipment/edit.erb
+++ b/views/equipment/edit.erb
@@ -31,5 +31,5 @@
   value="<%= @equipment.quantity %>"
   />
 
-  <input type='submit' value="Delete Equipment Details">
+  <input type='submit' value="Edit Equipment Details">
 </form>
