--- a/views/equipment/show.erb
+++ b/views/equipment/show.erb
@@ -1,8 +1,13 @@
-<h1>Equipment <%= @equipment.name %></h1>
+<h1>Equipment <%= @equipment.model %></h1>
 
-<p>Category: <%= @equipment.name %></p>
+<p>Category: <%= @equipment.category %></p>
+
+<p>Day_rate: <%= @equipment.day_rate %></p>
+
+<p>Quantity: <%= @equipment.quantity %></p>
 
 <ul>
+  <p> Hired too:</p>
   <% @equipment.customers.each do |customer| %>
   <li><%= customer.name %></li>
   <% end %>
