--- a/views/layout.erb
+++ b/views/layout.erb
@@ -9,12 +9,15 @@
   <link rel="stylesheet" type="text/css" href="/styles/buttons.css">
   <link rel="stylesheet" type="text/css" href="/styles/forms.css">
   <link rel="stylesheet" type="text/css" href="/styles/structure.css">
-  <link rel="stylßesheet" type="text/css" href="/styles/tables.css">
+  <link rel="stylesheet" type="text/css" href="/styles/tables.css">
 </head>
 <body>
 <main class="flex flex--row">
   <nav>
     <ul>
+      <li>
+        <a href="/">Home Page</a>
+      </li>
       <li>
         <a href="/equipment">Our Kit</a>
       </li>
