--- a/views/equipment/confirm.erb
+++ b/views/equipment/confirm.erb
@@ -1,5 +1,5 @@
-<h1>Surf Rental Delete Confirmed!</h1>
+<h1>Surf Equipment Delete Confirmed!</h1>
 
-<form action="/">
-<input class="btn btn--action" type='submit' value="Return to Home">
+<form action="/equipment">
+<input class="btn btn--action" type='submit' value="Return to Equipment">
 </form>
