--- a/views/rentals/delete.erb
+++ b/views/rentals/delete.erb
@@ -23,5 +23,13 @@
   value="<%= @rental.hire_duration %>"
   />
 
-  <input type='submit' value="Edit Rental Details">
+  <label for="quantity">Quantity</label>
+  <input
+  type="text"
+  name="quantity"
+  id="quantity"
+  value="<%= @rental.quantity %>"
+  />
+
+  <input type='submit' value="Delete Rental Details">
 </form>
