--- a/public/styles/forms.css
+++ b/public/styles/forms.css
@@ -1,7 +1,7 @@
 input[type="submit"] {
-  text-transform: uppercase;
-  font-family: 'Special Elite', cursive;
-  font-size: 15px; 
+    text-transform: uppercase;
+    font-family: 'Special Elite', cursive;
+    font-size: 15px;  */
 }
 
 select {
