--- a/views/customers/edit.erb
+++ b/views/customers/edit.erb
@@ -1,4 +1,4 @@
-<form method="post" action="/customer/<%= @customer.id %>">
+<form method="post" action="/customers/<%= @customer.id %>">
   <label for="name">Name:</label>
   <input
   type="text"
