--- a/views/rentals/edit.erb
+++ b/views/rentals/edit.erb
@@ -15,6 +15,14 @@
   value="<%= @rental.equipment_id %>"
   />
 
+  <label for="quantity">Quantity</label>
+  <input
+  type="text"
+  name="quantity"
+  id="quantity"
+  value="<%= @rental.quantity %>"
+  />
+
   <label for="hire_duration">Hire duration</label>
   <input
   type="text"
