--- a/views/customers/index.erb
+++ b/views/customers/index.erb
@@ -23,7 +23,7 @@
     <td><a class="btn btn--action" href="/customers/<%= customer.id %>/edit">Edit customer</a></td>
     <td>|</td>
     <td><form action="/customers/<%= customer.id %>/delete" method="POST">
-      <input class="btn btn--danger" type="submit" value="delete" />
+      <input class="btn btn--action" type="submit" value="Delete" />
     </form><td>|</td>
   </tr>
   <% end %>
