--- a/views/customers/show.erb
+++ b/views/customers/show.erb
@@ -11,13 +11,7 @@
   <li><%= equipment.model %></li>
   <% end %>
 </ul>
-
-
-<ul class="flex-container">
-  <li class="flex-item">1</li>
-  <li class="flex-item">2</li>
-  <li class="flex-item">3</li>
-  <li class="flex-item">4</li>
-  <li class="flex-item">5</li>
-  <li class="flex-item">6</li>
-</ul>
+<br>
+<br>
+<br>
+<img src="/images/kelly_slater.jpg" alt="surf shot" style="float:center; width:400px; height:250px">
