--- a/views/equipment/index.erb
+++ b/views/equipment/index.erb
@@ -27,7 +27,7 @@
     <td><a class="btn btn--action" href="/equipment/<%= equipment.id %>/edit">Edit equipment</a></td>
     <td>|</td>
     <td><form action="/equipment/<%= equipment.id %>/confirm" method="POST">
-      <input class="btn btn--danger" type="submit" value="delete" />
+      <input class="btn btn--action" type="submit" value="Delete" />
     </form><td>|</td>
   </tr>
   <% end %>
