--- a/views/index.erb
+++ b/views/index.erb
@@ -2,4 +2,4 @@
 
 <p>The Home of Awesome Surf Rentals</p>
 
-<p>Welcome to the Rental Management System, please use the navigation bar:</p>
+<p>Welcome to the Rental Management System, please use the navigation bar above</p>
