--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <br>
+  <br>
+  <br>
   <title>Nudge Exchange</title>
   <link href="https://fonts.googleapis.com/css?family=Merriweather|Special+Elite" rel="stylesheet">
 
@@ -12,14 +15,16 @@
   <link rel="stylesheet" type="text/css" href="/styles/tables.css">
 </head>
 <body>
-<main class="flex flex--row">
+<img src="/images/logo03.png" alt="nudge logo" style="float:right; width:104px; height:142px">
+
+<main class="flex--row">
   <nav>
     <ul>
       <li>
         <a href="/">Home Page</a>
       </li>
       <li>
-        <a href="/equipment">Our Kit</a>
+        <a href="/equipment">Equipment</a>
       </li>
       <li>
         <a href="/customers">Customers</a>
@@ -29,6 +34,7 @@
       </li>
     </ul>
   </nav>
+
   <section id="content">
   <%= yield %>
   </section>
