--- a/views/rentals/index.erb
+++ b/views/rentals/index.erb
@@ -28,7 +28,7 @@
     <td><a class="btn btn--action" href="/rentals/<%= rental.id %>/edit">Edit rental</a></td>
     <td>|</td>
     <td><form action="/rentals/<%= rental.id %>/delete" method="POST">
-      <input class="btn btn--danger" type="submit" value="off hire" />
+      <input class="btn btn--action" type="submit" value="Off Hire" />
     </form><td>|</td>
   </tr>
   <% end %>
