--- a/views/rentals/new.erb
+++ b/views/rentals/new.erb
@@ -1,4 +1,4 @@
-<h1>Surf Rental!</h1>
+<h1>New Rental!</h1>
 
 <form action="/rentals" method="post">
   <label>
@@ -30,13 +30,16 @@
 
   <label>
     Select a quantity:
+    <br>
       <input type="number" name ="quantity" min="1" max= "6"></input>
   </label>
-<br>
+  <br>
   <label>
     Select hire duration:
+    <br>
       <input type="number" name ="hire_duration" min="1" max= "365"></input>
   </label>
-
+  <br>
+  <br>
   <input class="btn btn--action" type='submit' value="Hire!">
 </form>
