--- a/views/equipment/show.erb
+++ b/views/equipment/show.erb
@@ -7,8 +7,11 @@
 <p>Quantity: <%= @equipment.quantity %></p>
 
 <ul>
-  <p> Hires too:</p>
+  <p> Currently on Hire to:</p>
   <% @equipment.customers.each do |customer| %>
   <li><%= customer.name %></li>
   <% end %>
 </ul>
+<br>
+<br>
+<img src="/images/surf_home3.jpg" alt="surf image" style="float:center; width:400px; height:250px">
