--- a/views/rentals/show.erb
+++ b/views/rentals/show.erb
@@ -7,3 +7,7 @@
 <p>Hire_duration: <%= @rental.hire_duration %></p>
 
 <p>Quantity: <%= @rental.quantity %></p>
+
+<br>
+<br>
+<img src="/images/kelly_slater.jpg" alt="surf image" style="float:center; width:400px; height:250px">
