--- a/views/customers/confirm.erb
+++ b/views/customers/confirm.erb
@@ -1,5 +1,9 @@
 <h1>Customer Delete Confirmed!</h1>
-
+<br>
+<p>This surfer no longer wants the best boards</p>
+<img src="/images/hmmm.png" alt="surf image" style="float:center; width:100px; height:100px">
+<br>
+<br>
 <form action="/customers">
 <input class="btn btn--action" type='submit' value="Return to Customers">
 </form>
