--- a/views/customers/new.erb
+++ b/views/customers/new.erb
@@ -8,7 +8,7 @@
     </div>
 
     <div class="form-el">
-      <label for="account_number">Accout_number:</label>
+      <label for="account_number">Account_number:</label>
       <input type="text" name="account_number" id="account_number"/>
     </div>
 
