--- a/views/equipment/index.erb
+++ b/views/equipment/index.erb
@@ -8,7 +8,7 @@
     <th></th>
     <th>Day_rate</th>
     <th></th>
-    <th>Quantity</th>
+    <th>Quantity in Stock</th>
     <th></th>
     <th>Edit Kit</th>
     <th></th>
