--- a/views/index.erb
+++ b/views/index.erb
@@ -3,3 +3,19 @@
 <p>The Home of Awesome Surf Rentals</p>
 
 <p>Welcome to the Rental Management System, please use the navigation bar above</p>
+
+<br>
+<br>
+<h2>Dashboard</h2>
+<table>
+  <tr>
+    <th>Model</th>
+    <th></th>
+    <th>Category</th>
+    <th></th>
+    <th>Quantity in Stock</th>
+    <th></th>
+    <th>Quantity on Hire</th>
+    <th></th>
+    <th>Total</th>
+</table>
