--- a/views/rentals/confirm.erb
+++ b/views/rentals/confirm.erb
@@ -1,9 +1,13 @@
 <h1>Surf Rental Confirmed!</h1>
-
+<p>STOKED!!!</p>
+<img src="/images/stoked2.gif" alt="surf image" style="float:center; width:400px; height:250px">
+<br>
+<br>
 <form action="/">
 <input class="btn btn--action" type='submit' value="Return to Home">
 </form>
-
+<br>
+<br>
 <form action="/rentals">
 <input class="btn btn--action" type='submit' value="Return to Rentals">
 </form>
