--- a/views/rentals/show.erb
+++ b/views/rentals/show.erb
@@ -9,5 +9,6 @@
 <p>Quantity: <%= @rental.quantity %></p>
 
 <br>
+<p>This kit is in the pipe!</p>
 <br>
-<img src="/images/kelly_slater.jpg" alt="surf image" style="float:center; width:400px; height:250px">
+<img src="/images/surf2.gif" alt="surf image" style="float:center; width:400px; height:250px">
