--- a/views/equipment/confirm.erb
+++ b/views/equipment/confirm.erb
@@ -1,5 +1,9 @@
 <h1>Surf Equipment Delete Confirmed!</h1>
-
+<br>
+<p>This kit has been donated to the local surf school</p>
+<img src="/images/awesome.gif" alt="surf image" style="float:center; width:400px; height:250px">
+<br>
+<br>
 <form action="/equipment">
 <input class="btn btn--action" type='submit' value="Return to Equipment">
 </form>
