--- a/views/equipment/show.erb
+++ b/views/equipment/show.erb
@@ -1,4 +1,4 @@
-<h1>Equipment <%= @equipment.model %></h1>
+<h1>Equipment: <%= @equipment.model %></h1>
 
 <p>Category: <%= @equipment.category %></p>
 
@@ -7,11 +7,10 @@
 <p>Quantity: <%= @equipment.quantity %></p>
 
 <ul>
-  <p> Currently on Hire to:</p>
+  <p> Currently Serving:</p>
   <% @equipment.customers.each do |customer| %>
   <li><%= customer.name %></li>
   <% end %>
 </ul>
 <br>
-<br>
-<img src="/images/surf_home3.jpg" alt="surf image" style="float:center; width:400px; height:250px">
+<img src = "<%= @equipment.img %>" alt="surf image" style="float:center; width:400px; height:250px">
