--- a/public/styles/forms.css
+++ b/public/styles/forms.css
@@ -11,7 +11,7 @@ select {
  font-size: 0.7em;
  -webkit-appearance: none;
  background: url('/images/logo03.png') 96% / 15% no-repeat white;
- font-family: 'Merriweather', serif;
+ font-family: 'Special Elite', serif;
  border: 1px solid #eee;
  display: block;
 }
