--- a/views/index.erb
+++ b/views/index.erb
@@ -3,10 +3,11 @@
 <p>The Home of Awesome Surf Rentals</p>
 
 <p>Welcome to the Rental Management System, please use the navigation bar above</p>
-
+<!-- Note this is a fudge-I'd liked to have done the below but ran out of time and.....skill :0)  -->
 <br>
 <br>
 <h2>Dashboard</h2>
+<br>
 <table>
   <tr>
     <th>Model</th>
@@ -18,4 +19,55 @@
     <th>Quantity on Hire</th>
     <th></th>
     <th>Total</th>
+  <tr></tr>
+    <td>Quicksilver RX10</td>
+    <td>|</td>
+    <td>Surf Board</td>
+    <td>|</td>
+    <td>10</td>
+    <td>|</td>
+    <td>2</td>
+    <td>|</td>
+    <td>12</td>
+  <tr></tr>
+    <td>O Neill Slingshot</td>
+    <td>|</td>
+    <td>Kite Board</td>
+    <td>|</td>
+    <td>10</td>
+    <td>|</td>
+    <td>2</td>
+    <td>|</td>
+    <td>12</td>
+  <tr></tr>
+    <td>Quicksilver Waterman</td>
+    <td>|</td>
+    <td>SUP Board</td>
+    <td>|</td>
+    <td>10</td>
+    <td>|</td>
+    <td>3</td>
+    <td>|</td>
+    <td>13</td>
+  <tr></tr>
+    <td>Hurley Slater</td>
+    <td>|</td>
+    <td>Wind Board</td>
+    <td>|</td>
+    <td>10</td>
+    <td>|</td>
+    <td>3</td>
+    <td>|</td>
+    <td>13</td>
+  <tr></tr>
+    <td>Totals</td>
+    <td></td>
+    <td></td>
+    <td>|</td>
+    <td>40</td>
+    <td>|</td>
+    <td>10</td>
+    <td>|</td>
+    <td>50</td>
+
 </table>
