--- a/views/rentals/confirm.erb
+++ b/views/rentals/confirm.erb
@@ -1,6 +1,6 @@
 <h1>Surf Rental Confirmed!</h1>
 <p>STOKED!!!</p>
-<img src="/images/stoked2.gif" alt="surf image" style="float:center; width:400px; height:250px">
+<img src="/images/stoked.gif" alt="surf image" style="float:center; width:600px; height:300px">
 <br>
 <br>
 <form action="/">
