--- a/views/rentals/offhire.erb
+++ b/views/rentals/offhire.erb
@@ -1,9 +1,13 @@
 <h1>Surf Rental Offhire</h1>
-
+<br>
+<p>Kit returned for next hire</p>
+<img src="/images/thumbs.gif" alt="surf image" style="float:center; width:300px; height:300px">
+<br>
 <form action="/">
 <input class="btn btn--action" type='submit' value="Return to Home">
 </form>
-
+<br>
+<br>
 <form action="/rentals">
 <input class="btn btn--action" type='submit' value="Return to Rentals">
 </form>
