--- a/public/styles/structure.css
+++ b/public/styles/structure.css
@@ -1,17 +1,17 @@
 body {
   background-color: #0678bc;
-  /* background-image: url('/images/surf.gif'); */
+  background-image: url('/images/surf.gif');
   background-size: 100%;
   background-repeat: no-repeat;
   color: black;
-  font-family: 'Merriweather', serif;
+  font-family: 'Special Elite', serif;
   font-size: 1.2em;
   padding: 0px;
   margin: 0px;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Merriweather', cursive;
+  font-family: 'Special Elite', cursive;
   margin: 0px;
   padding: 0px;
 }
@@ -41,6 +41,7 @@ nav ul li {
   display: inline-block;
   margin-left: 150px;
   padding-top: 0px;
+  margin-right: 50px;
 }
 
 
